ahora todas las paginas son responisve

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="nav-item link "><button type="button" class="btn btn-danger"><a
                   href="./pages/mapas.html">Mapas</a></button></li>
             <li class="nav-item link "><button type="button" class="btn btn-danger"><a
-                  href="./pages/noticias.html">Novedades</a></button></li>
+                  href="./pages/noticias.html">Noticias</a></button></li>
           </ul>
       </nav>
     </div>
@@ -84,40 +84,37 @@
     </section>
     <section class="container">
       <div class="row ">
-        <h2 class="fw-bold colorback ">Noticias de la semana</h2>
+        <h2 class="display-4 fw-bold  ">Noticias Destacadas</h2>
         <div class="col-sm-12 col-md-6 col-lg-6 ">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50">Cambios de PBE</h2>
-          <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/valorantnoticias.jpg"
-              alt="noticias"></a>
+          <a href="./pages/noticias.html#pbe"><img class="img-fluid slide" src="./fotos/pbevalo.png" alt="noticias"></a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50 ">Mapa Drift</h2>
-          <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/driftvalorantt.jpg"
+          <a href="./pages/noticias.html#driftvalorant"><img class="img-fluid slide" src="./fotos/driftvalo.png"
               alt="noticiasvalo"></a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 ">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50 ">Llega a consolas</h2>
-          <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/valorantconsolass.png"
+          <a href="./pages/noticias.html#valoconsolas"><img class="img-fluid slide" src="./fotos/consolasvalo.png"
               alt="valoparaconsolas"></a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6">
           <h2 class="fw-bold bg-success p-2 bg-opacity-50">Nuevo arsenal</h2>
-          <a href="./pages/noticias.html"><img class="img-fluid slide" src="./fotos/outlawvalorantt.jpg"
+          <a href="./pages/noticias.html#outlaw"><img class="img-fluid slide" src="./fotos/outlaw.png"
               alt="noticiasvalo"></a>
         </div>
       </div>
     </section>
-
     <section class="container">
       <div class="row">
         <div>
-          <h2 class="fw-bold colorback">Conoce Valorant</h2>
+          <h2 class="display-5 fw-bold fondito ">Conoce Valorant</h2>
           <video class=" border d-block w-100" src="./videos/video-queesvalorant.mp4" controls></video>
         </div>
       </div>
     </section>
   </main>
-
   <footer>
     <div class="logoabajo text-center">
       <img src="./fotos/logovalorant.png" alt="logovalo">
@@ -131,13 +128,11 @@
         <a class="btn link colorhover2" href="./pages/noticias.html">Novedades</a>
       </div>
     </section>
-
-    <div class="direccion">
+<div class="direccion">
       <p class="fw-bold">Creadted by Nicole Bricka @2024 your company. All right reserved.</p>
     </div>
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
