--- a/pages/agentes.html
+++ b/pages/agentes.html
@@ -41,7 +41,7 @@
     <main>
         <section class="container ">
             <h2 class="Titulo distancia fw-bold">AGENTES</h2>
-            <h3 class=" fw-bold ">Cada personaje cumple una función. Más allá del tipo de personaje que elijamos,
+            <h3>Cada personaje cumple una función. Más allá del tipo de personaje que elijamos,
                 también
                 debemos
                 tener en cuenta las habilidades individuales de cada uno.</h3>
@@ -58,7 +58,7 @@
                             <img class="img-fluid" src="../fotos/skye.png " alt="Skye valo">
                             <h4 class="fw-bold fondito"> Habilidades</h4>
                             <div>
-                                <ul class=" h4 fw-bold white">
+                                <ul class=" fw-bold white">
                                     <li><span>Q-PRECURSOR:</span>Equipa un amuleto de lobo marsupial. Dispara
                                         para
                                         desplegar al
@@ -76,17 +76,15 @@
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
                             <h3 class="fw-bold fondito">Astra</h3>
-                            <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white ">Astra, la agente ghanesa,
-                                controla las energías del cosmos con
-                                su forma astral para dar forma al campo de batalla a su antojo </p>
+                            <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white ">La agente ghanesa Astra canaliza las energías del cosmos para remodelar los campos de batalla a su antojo. Con pleno dominio de su forma astral.</p>
                             <img class="img-fluid" src="../fotos/astra.png" alt="Astra valo">
                             <h4 class="fw-bold fondito"> Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class=" fw-bold white">
                                     <li><span>Q-PULSO NOVA:</span>Coloca estrellas en Forma astral, el Pulso
                                         nova se
                                         carga
-                                        brevemente y explota. </li>
+                                        brevemente y explota lo que aturde a todos los jugadores en el área. </li>
                                     <li><span>E-POZO
                                             GRAVITATORIO:</span>Atrae hacia el centro los jugadores de la zona antes de
                                         que explote.</li>
@@ -105,7 +103,7 @@
                             <img class="img-fluid" src="../fotos/breach.png" alt="Breach valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class=" fw-bold white">
                                     <li><span>Q-FULGOR:</span> Equipa una carga explosiva cegadora. Cuando
                                         detona,
                                         la carga ciega a todos los jugadores que la estén mirando.</li>
@@ -133,7 +131,7 @@
                             <img class="img-fluid" src="../fotos/brimstone.png" alt="Brimstone valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class=" fw-bold white">
                                     <li><span>Q-LA INCENDIARIA:</span> Equipa un lanzagranadas incendiarias.
                                         Dispara
                                         una granada
@@ -160,7 +158,7 @@
                             <img class="img-fluid" src="../fotos/agentechamber.jpg" alt="Chamber valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class="fw-bold white">
                                     <li><span>Q-CAZADOR DE CABEZAS:</span> Activala para equipar una pistola
                                         pesada.
                                         Utiliza el
@@ -168,7 +166,7 @@
                                     <li><span>E-RENDEZVOUS:</span>
                                         Equipa un
                                         anclaje de
-                                        teletransportación.</li>
+                                        teletransportación, Podes recoger el anclaje y volver a colocarlo en otro lugar.</li>
                                     <li><span> X-TOUR DE
                                             FORCE:</span>
                                         Activa
@@ -189,7 +187,7 @@
                             <img class="img-fluid" src="../fotos/agenteCypher.jpg" alt="Cypher valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class="fw-bold white">
                                     <li><span>Q-CIBERJAULA:</span> Lanza instantaneamente una prisión
                                         cibernética
                                         frente a Cypher. Activala para crear una zona que bloquea la visión de los
@@ -219,7 +217,7 @@
                             <img class="img-fluid" src="../fotos/agenteGekko.png" alt="Gekko valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class="fw-bold white">
                                     <li><span>Q-CARNALITO:</span> Equipa a Carnalito y dispara para enviarlo
                                         hacia
                                         adelante en
@@ -252,7 +250,7 @@
                             <img class="img-fluid" src="../fotos/agenteJett.jpg" alt="Jett valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class="fw-bold white">
                                     <li><span>Q-RÁFAGA
                                             ASCENDENTE:</span> Propulsa a Jett hacia el aire se propulsa fuertemente hacia delante cada dos segundos.</li>
                                     <li><span>E-IMPULSO
@@ -282,7 +280,7 @@
                             <img class="img-fluid" src="..//fotos/agenteKilljoy.jpg" alt="Killjoy valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class="fw-bold white">
                                     <li><span>Q-ALARMABOT:</span> Después de alcanzar a su objetivo, el bot
                                         explota,
                                         lo que
@@ -312,7 +310,7 @@
                             <img class="img-fluid borde" src="..//fotos/agenteRaze.jpg" alt="Raze valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class=" fw-bold white">
                                     <li><span>Q-PAQUETE EXPLOSIVO:</span> Lanza al instante un Paquete Explosivo
                                         que
                                         se adhiere a las superficies, esta habilidad no inflige daño a Raze, pero sí que
@@ -337,7 +335,7 @@
                             <img class="img-fluid" src="../fotos/agenteReyna.jpg" alt="Reyna valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class="fw-bold white">
                                     <li><span>Q-DEVORAR:</span> Los enemigos eliminados por Reyna dejan orbes de
                                         almas que duran 3 seg. Consume al instante un orbe de almas cercano y la cura
                                         rápidamente
@@ -359,7 +357,7 @@
                             <img class="img-fluid" src="../fotos/agentesage.jpg" alt="sage valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
                             <div>
-                                <ul class="h4 fw-bold white">
+                                <ul class="fw-bold white">
                                     <li><span>Q-ORBE RALENTIZADOR:</span> Este detonará al caer al suelo y
                                         creará en
                                         la
