--- a/pages/armas.html
+++ b/pages/armas.html
@@ -38,7 +38,7 @@
     <main>
         <section class="container ">
             <h2 class="Titulo distancia fw-bold">ARMAS</h2>
-            <h3 class=" fw-bold ">Las armas se dividen en dos categorías, armas de mano y armas primarias. Las
+            <h3>Las armas se dividen en dos categorías, armas de mano y armas primarias. Las
                 armas de mano consisten en
                 pistolas, mientras que las primarias incluyen SMG, escopetas, rifles, rifles de francotirador y
                 ametralladoras.</h3>
