--- a/pages/mapas.html
+++ b/pages/mapas.html
@@ -38,7 +38,7 @@
     <main>
         <section class="container">
         <h2 class="Titulo distancia fw-bold">MAPAS</h2>
-        <h3 class="fw-bold">Descubri la lista de mapas disponibles de Valorant. Te mostramos sus zonas para poder plantar la SPIKE y sus caracteristicas para que rindas al maximo en ellos.</h3>
+        <h3>Descubri la lista de mapas disponibles de Valorant. Te mostramos sus zonas para poder plantar la SPIKE y sus caracteristicas para que rindas al maximo en ellos.</h3>
         <h2 class="Titulo fw-bold distancia">Lista de mapas</h2>
         <section class="container">
             <div class="row ">
@@ -58,7 +58,7 @@
                 <p class="fw-bold bg-success p-2 bg-opacity-50">Ascent es un mapa ambientado en Italia e inspirado en Venecia. Aunque en este caso se trata de una ciudad flotante con canales muy interesante, algunas paredes destructibles y puertas que se pueden abrir y cerrar.</p>
                 <div>
                     <ul class="h5 white">
-                        <li>Las <span>calles son estrechas</span>, asi que es importante que cada miembro del equipo ocupe un lugar y una posicion determinante.</li>
+                        <li>Las <span>calles son estrechas</span>, es importante que cada miembro del equipo ocupe una posicion determinante.</li>
                     <li> <span>Raze, Cypher y Jett</span> son agentes que dan muy buenos resultados en este mapa.</li>
                     <li>No hay que olvidarse de <span>cubrir</span> medio, ya que si lo descuidamos puede jugarnos en contra.</li>
                     </ul>
@@ -104,7 +104,7 @@
                     <div>
                         <ul class="h5 white">
                             <li>En la <span>Zona A</span> hay un monton de lugares para atacar y defender debes prestar mucha atencion.</li>
-                        <li>El <span> Area central</span> del mapa es un buen lugar para que los atacantes avancen.</li>
+                        <li>El <span> Area central</span> del mapa es un buen lugar para los atacantes.</li>
                         <li> <span>Jett, Omen y Raze</span> son agentes que dan buenos resultados en este mapa.</li>
                         </ul>
                     </div>
@@ -127,8 +127,8 @@
                 <p class="fw-bold bg-success p-2 bg-opacity-50">Un terreno abierto para las batallas por posicionamiento y de desgaste divide Ascent en dos sitios, ambos sitios se pueden fortificar con puertas que aun asi son destructibles.</p>
                     <div>
                         <ul class="h5 white">
-                            <li><span>Main A y Main B</span> son puntos de entrada cruciales para los atacantes.</li>
-                        <li><span> Vigas B y Back B</span> ofrecen buenas posiciones para colocarse en defensa.</li>
+                            <li><span>Main A y Main B</span> son puntos de entrada cruciales.</li>
+                        <li><span> Vigas B y Back B</span> ofrecen buenas posiciones.</li>
                         <li> <span>Sova, Brimstone y Viper</span> son agentes que dan buenos resultados en este mapa.</li>
                         </ul>
                     </div>
