--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -36,95 +36,142 @@
         </div>
     </header>
     <main>
-        <h2 class="Titulo distancia fw-bold">NOTICIAS</h2>
-        <p>Valorant fue un enorme éxito desde el primer día, un FPS multijugador competitivo que supuso un enorme soplo
-            de aire fresco para muchos jugadores. Totalmente situado y establecido, al igual que League of Legends, la
-            gallina de los huevos de oro de la compañía, un título que ha sido capaz de llevar los esports a un escalón
-            superior a nivel mundial.</p>
-        <section>
-            <article>
-                <h2 class="habilidad">¿Valorant para consolas?</h2>
-                <p>Por ahora, Valorant sigue siendo exclusivo de PC, por lo que los entusiastas de las consolas esperan
-                    ansiosos su turno para experimentar su emoción. La pregunta del millón: "¿Cuándo llegará Valorant a
-                    las
-                    consolas?".</p>
-                <img src="../fotos/valorant-consolas.png" alt="consolas valo">
-                <p>Siempre han existido rumores en torno a la llegada de Valorant, el popular FPS de Riot Games, a
-                    consolas,
-                    pero nunca ha habido ningún anuncio o declaración oficial por parte de sus desarrolladores. Ahora,
-                    una
-                    filtración apunta a que esta versión del juego podría ser una realidad muy factible, y es que una
-                    línea
-                    de código que ha compartido el usuario de X (Twitter) @VALORANTLeaksEN, muestra un mensaje que
-                    parece
-                    destinado a un mando. ¿Casualidad? Podría serlo, pero Valorant no tiene compatibilidad con ningún
-                    mando,
-                    por lo que habría dos posibilidades: Riot trabajando en la compatibilidad del juego con gamepads o
-                    que
-                    el juego llegue a consolas.</p>
-                <p>Valorant forma parte del Xbox Game Pass en PC, por lo que no sería descartable verlo aparecer en
-                    consolas. La línea de código habla sobre un “mando desconectado”, indicando que “reconecta el mando
-                    y
-                    presiona A”. Esto último es un indicio del que mando sobre el que posiblemente están trabajando es
-                    el de
-                    Xbox, pero habrá que esperar para ver si finalmente esta filtración tiene algo que ver con el
-                    posible
-                    futuro del juego en consolas.</p>
-            </article>
-            <article>
-                <h2 class="habilidad">Cypher y Fade reciben cambios en el PBE de Valorant</h2>
-                <img src="../fotos/valorant-cypherfade.png" alt="cambios valo">
-                <p>Tanto Fade como Cypher recibirán esos cambios que intentarán cambiar su dinámica actual. Si hablamos
-                    de
-                    la agente turca, su pick rate aumenta hasta el 5.9%, lo que la coloca como la sexta agente más
-                    elegida.
-                    Su porcentaje de victorias es más que aceptable con un 50,9%. Por su parte, Cypher es el tercero
-                    menos
-                    elegido por los jugadores con un mero 2%.</p>
-                <p>Resta esperar para conocer los cambios. Seguramente en Cypher veamos algo relacionado con su Cable
-                    trampa, una habilidad muy útil para descubrir a nuestros enemigos pero que se revela muy fácilmente.
-                    Otros Centinelas del calibre de Chamber o Killjoy hacen una función mucho mayor. En cuanto a Fade,
-                    esperamos algún nerf a sus habilidades, aunque todavía no tenemos claro cómo se desarrollarán.</p>
-            </article>
-            <article>
-                <h2 class="habilidad">El rifle Outlaw, la primera nueva arma en llegar a Valorant</h2>
-                <p>Para los que no lo sepan, desde su introducción Valorant ha contado con un sendo arsenal que contenía
-                    varios tipos de armas, pero desde su lanzamiento hace 3 años y medio no se han incorporado nuevas
-                    opciones a las armas que los distintos agentes pueden utilizar en el juego. </p>
-                <img src="../fotos/valorant-outlaw.png" alt="outlaw valo">
-                <h3>Cómo funciona el rifle Outlaw</h3>
-                <p>Es un rifle que a diferencia de otros no pierde el zoom al disparar pero esa no es su única virtud.
-                    Esta
-                    nueva arma de tipo rifle es capaz de fulminar de un disparo a cualquier agente cuyos puntos de vida
-                    estén por debajo de 140, y está pensado especialmente para contrarrestar a quienes lleven alguna
-                    placa
-                    de armadura encima.</p>
-                <h4>Cuándo se podrá conseguir el rifle Outlaw y cuánto cuesta</h4>
-                <p>La llegada del nuevo rifle está prevista inicialmente para el inicio del Acto 1 del Episodio 8 del
-                    juego,
-                    cuya implementación en el cliente de Valorant está prevista para el 9 de enero. A partir de ese
-                    momento,
-                    y con la nueva versión del juego ya instalada, todos los jugadores deberían poder hacerse con él en
-                    la
-                    tienda de armas por 2.400 créditos.</p>
-            </article>
-            <article>
-                <h2 class="habilidad">Valorant presenta su nuevo mapa Drift</h2>
-                <img src="../fotos/valorant-drift.jpg" alt="Drift valo">
-                <p>El shooter estratégico de Riot Games presenta un nuevo mapa, Drift. Durante la transmisión de la
-                    final de
-                    Game Changers desde Brasil, la desarrolladora ha hecho público el trailer de Drift, que se inspira
-                    en
-                    Tailandia y sus mercados flotantes</p>
-                <p>La inspiración en Tailandia es clara para los diseñadores que quisieron crear un espacio de largo
-                    alcance
-                    que permitiera disfrutar a los jugadores que se lo disputaran. El mapa, a juicio de Simas- será
-                    ideal
-                    para los duelos de puntería. La cuerda por encima se convierten en un elemento crucial que permite a
-                    los
-                    jugadores cambiar de calle.</p>
-                <video src="../videos/trailer nuevo mapa.mp4" controls></video>
-            </article>
+        <section class="container">
+            <h2 class="Titulo distancia fw-bold">NOTICIAS</h2>
+            <section class="container">
+                <div class="row">
+                    <article class="col-sm-12 col-md-12 col-lg-12" id="valoconsolas">
+                        <h2 class="fw-bold display-6 fondito">¿Valorant en Xbox y PlayStation? Podria suceder pronto
+                        </h2>
+                        <p class=" white">Por ahora, Valorant sigue siendo exclusivo de PC, por lo que los entusiastas
+                            de las consolas esperan
+                            ansiosos su turno para experimentar su emoción. La pregunta del millón: "¿Cuándo llegará
+                            Valorant a
+                            las
+                            consolas?".</p>
+                        <img class="img-fluid imagen" src="../fotos/valoconsolas2.png" alt="valoconsolas2">
+                        <p class="white">Siempre han existido rumores en torno a la llegada de Valorant, el popular FPS
+                            de Riot Games, a
+                            consolas,
+                            pero nunca ha habido ningún anuncio o declaración oficial por parte de sus desarrolladores.
+                            Ahora,
+                            una
+                            filtración apunta a que esta versión del juego podría ser una realidad muy factible, y es
+                            que una
+                            línea
+                            de código que ha compartido el usuario de X (Twitter) @VALORANTLeaksEN, muestra un mensaje
+                            que
+                            parece
+                            destinado a un mando. ¿Casualidad? Podría serlo, pero Valorant no tiene compatibilidad con
+                            ningún
+                            mando,
+                            por lo que habría dos posibilidades: Riot trabajando en la compatibilidad del juego con
+                            gamepads o
+                            que
+                            el juego llegue a consolas.</p>
+                        <p class="white">Valorant forma parte del Xbox Game Pass en PC, por lo que no sería descartable
+                            verlo aparecer en
+                            consolas. La línea de código habla sobre un “mando desconectado”, indicando que “reconecta
+                            el mando
+                            y
+                            presiona A”. Esto último es un indicio del que mando sobre el que posiblemente están
+                            trabajando es
+                            el de
+                            Xbox, pero habrá que esperar para ver si finalmente esta filtración tiene algo que ver con
+                            el
+                            posible
+                            futuro del juego en consolas.</p>
+                    </article>
+                    <article class="col-sm-12 col-md-12 col-lg-12" id="pbe">
+                        <h2 class=" fw-bold display-6 fondito">Cypher y Fade reciben cambios en el PBE de Valorant</h2>
+                        <img class="img-fluid distancia" src="../fotos/banerfade.png" alt="bannerfade">
+                        <p class=" white">Tanto Fade como Cypher recibirán esos cambios que intentarán cambiar su
+                            dinámica actual. Si hablamos
+                            de
+                            la agente turca, su pick rate aumenta hasta el 5.9%, lo que la coloca como la sexta agente
+                            más
+                            elegida.
+                            Su porcentaje de victorias es más que aceptable con un 50,9%. Por su parte, Cypher es el
+                            tercero
+                            menos
+                            elegido por los jugadores con un mero 2%.</p>
+                        <img class="img-fluid" src="../fotos/banercypher2.png" alt="bannercypher">
+                        <p class=" white">Resta esperar para conocer los cambios. Seguramente en Cypher veamos algo
+                            relacionado con su Cable
+                            trampa, una habilidad muy útil para descubrir a nuestros enemigos pero que se revela muy
+                            fácilmente.
+                            Otros Centinelas del calibre de Chamber o Killjoy hacen una función mucho mayor. En cuanto a
+                            Fade,
+                            esperamos algún nerf a sus habilidades, aunque todavía no tenemos claro cómo se
+                            desarrollarán.</p>
+                    </article>
+                    <article class="col-sm-12 col-md-12  col-lg-12" id="outlaw">
+                        <h2 class="fw-bold display-6 fondito">El rifle Outlaw, nueva arma que llego a Valorant</h2>
+                        <p class=" white">Para los que no lo sepan, desde su introducción Valorant ha contado con un
+                            sendo arsenal que contenía
+                            varios tipos de armas, pero desde su lanzamiento hace 3 años y medio no se han incorporado
+                            nuevas
+                            opciones a las armas que los distintos agentes pueden utilizar en el juego. </p>
+                        <img class="img-fluid imagen" src="../fotos/outlawvalo.png" alt="outlawvalo">
+                        <h3 class="fw-bold bg-success p-2 bg-opacity-50">Cómo funciona el rifle Outlaw</h3>
+                        <p class=" white">Es un rifle que a diferencia de otros no pierde el zoom al disparar pero esa
+                            no es su única virtud.
+                            Esta
+                            nueva arma de tipo rifle es capaz de fulminar de un disparo a cualquier agente cuyos puntos
+                            de vida
+                            estén por debajo de 140, y está pensado especialmente para contrarrestar a quienes lleven
+                            alguna
+                            placa
+                            de armadura encima.</p>
+                        <h3 class="fw-bold bg-success p-2 bg-opacity-50">¿Cuándo se podrá conseguir el rifle Outlaw y
+                            cuánto cuesta?</h3>
+                        <p class=" white">La llegada del nuevo rifle está prevista inicialmente para el inicio del Acto
+                            1 del Episodio 8 del
+                            juego,
+                            cuya implementación en el cliente de Valorant está prevista para el 9 de enero. A partir de
+                            ese
+                            momento,
+                            y con la nueva versión del juego ya instalada, todos los jugadores deberían poder hacerse
+                            con él en
+                            la
+                            tienda de armas por 2.400 créditos.</p>
+                    </article>
+                </div>
+                <article id="driftvalorant">
+                    <h2 class="fw-bold display-6 fondito">Valorant presenta su nuevo mapa Drift</h2>
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../fotos/drift1.png" class="d-block w-100" alt="drift1">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../fotos/drift2.jpg" class="d-block w-100" alt="drift2">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../fotos/drift3.png" class="d-block w-100" alt="drift3">
+                            </div>
+                        </div>
+                    </div>
+                    <p class="white">El shooter estratégico de Riot Games presenta un nuevo mapa, Drift. Durante la
+                        transmisión de la
+                        final de
+                        Game Changers desde Brasil, la desarrolladora ha hecho público el trailer de Drift, que se
+                        inspira
+                        en
+                        Tailandia y sus mercados flotantes</p>
+                    <p class="white">La inspiración en Tailandia es clara para los diseñadores que quisieron crear un
+                        espacio de largo
+                        alcance
+                        que permitiera disfrutar a los jugadores que se lo disputaran. El mapa, a juicio de Simas- será
+                        ideal
+                        para los duelos de puntería. La cuerda por encima se convierten en un elemento crucial que
+                        permite a
+                        los
+                        jugadores cambiar de calle.</p>
+                    <video class="border d-block w-100" src="../videos/trailer nuevo mapa.mp4" controls></video>
+                </article>
+
+            </section>
         </section>
     </main>
     <footer>
