--- a/pages/agentes.html
+++ b/pages/agentes.html
@@ -245,7 +245,7 @@
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white">Jett viene de Corea del Sur,
                                 y su estilo le
                                 permite
-                                asumir grandes riesgos. Corre y salta de aquí para allá y hacer trizas enemigos.
+                                asumir grandes riesgos. Corre y salta de aquí para allá.
                             </p>
                             <img class="img-fluid" src="../fotos/agenteJett.jpg" alt="Jett valo">
                             <h4 class="fw-bold fondito">Habilidades</h4>
