--- a/pages/mapas.html
+++ b/pages/mapas.html
@@ -55,7 +55,7 @@
             </article>
             <article class="col-sm-12 col-md-6 col-lg-6">
                 <img class="img-fluid" src="../fotos/mapaascent.png" alt="AscentValo">
-                <p class="fw-bold bg-success p-2 bg-opacity-50">Ascent es un mapa ambientado en Italia e inspirado en Venecia. Aunque en este caso se trata de una ciudad flotante con canales muy interesante, algunas paredes destructibles y puertas que se pueden abrir y cerrar.</p>
+                <p class="fw-bold bg-success p-2 bg-opacity-50">Ascent es un mapa ambientado en Italia e inspirado en Venecia. Aunque en este caso se trata de una ciudad flotante con canales muy interesante, paredes destructibles y puertas que se pueden abrir y cerrar.</p>
                 <div>
                     <ul class="h5 white">
                         <li>Las <span>calles son estrechas</span>, es importante que cada miembro del equipo ocupe una posicion determinante.</li>
