--- a/pages/agentes.html
+++ b/pages/agentes.html
@@ -150,7 +150,7 @@
                             </div>
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
-                            <h3 class="fw-bold colorback ">Chamber</h3>
+                            <h3 class="fw-bold fondito ">Chamber</h3>
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 whitefw-bold habilidad bg-success p-2 bg-opacity-50 white">
                                 Bien vestido y bien armado, el diseñador de armas francés Chamber repele
                                 agresores con una
@@ -179,7 +179,7 @@
                             </div>
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
-                            <h3 class="fw-bold colorback ">Cypher</h3>
+                            <h3 class="fw-bold fondito ">Cypher</h3>
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white">Cypher, el agente marroquí,
                                 es un sistema de vigilancia de un solo hombre
                                 que
@@ -209,7 +209,7 @@
                             </div>
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
-                            <h3 class="fw-bold colorback ">Gekko</h3>
+                            <h3 class="fw-bold fondito">Gekko</h3>
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white">Gekko, de Los Ángeles,
                                 lidera una pequeña pandilla de calamitosas
                                 criaturas.
@@ -241,7 +241,7 @@
                             </div>
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
-                            <h3 class="fw-bold colorback ">Jett</h3>
+                            <h3 class="fw-bold fondito">Jett</h3>
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white">Jett viene de Corea del Sur,
                                 y su estilo le
                                 permite
@@ -272,7 +272,7 @@
                             </div>
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
-                            <h3 class="fw-bold colorback ">Killjoy</h3>
+                            <h3 class="fw-bold fondito">Killjoy</h3>
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white">La prodigio alemana Killjoy
                                 asegura fácilmente los puntos estratégicos
                                 del
@@ -303,7 +303,7 @@
                             </div>
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
-                            <h3 class="fw-bold colorback ">Raze</h3>
+                            <h3 class="fw-bold fondito">Raze</h3>
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white">Raze gracias a su
                                 contundente estilo de juego llega de Brasil con su
                                 increible personalidad y sus grandes armas, en su mayoria bombas.</p>
@@ -329,7 +329,7 @@
                             </div>
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
-                            <h3 class="fw-bold colorback ">Reyna</h3>
+                            <h3 class="fw-bold fondito">Reyna</h3>
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white">Desde el corazón de México,
                                 Reyna llega para dominar los combates y cada asesinato la hace más fuerte.</p>
                             <img class="img-fluid" src="../fotos/agenteReyna.jpg" alt="Reyna valo">
@@ -351,7 +351,7 @@
                             </div>
                         </article>
                         <article class="col-sm-12 col-md-6 col-lg-6">
-                            <h3 class="fw-bold colorback ">Sage</h3>
+                            <h3 class="fw-bold fondito">Sage</h3>
                             <p class="fw-bold habilidad bg-success p-2 bg-opacity-50 white">Originaria de China, Sage
                                 destaca a la hora de crear espacios seguros y su capacidad de revivir a sus compañeros. </p>
                             <img class="img-fluid" src="../fotos/agentesage.jpg" alt="sage valo">
