--- a/pages/mapas.html
+++ b/pages/mapas.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiValo</title>
+    <meta name="description" content="Cada partida tiene lugar en un mapa y entenderlos es crucial para ganar partidas. Te mostramos tips y consejos para jugarlos.">
+    <title>Mapas de Valorant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/style.css">
