--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiValo</title>
+    <meta name="description" content="Toda la información, noticias y guías sobre Valorant el Shooter multijugador gratuito de Riot Games.">
+    <title>Ultimas noticias del mundo Valorant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/style.css">
